<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
  <string name="widget_label" translatable="false">Stocks Widget</string>
  <string name="google_news_endpoint" translatable="false">https://news.google.com/</string>
  <string name="yahoo_news_endpoint" translatable="false">https://finance.yahoo.com/news/</string>
  <string name="yahoo_finance_endpoint" translatable="false">https://finance.yahoo.com/</string>
  <string name="suggestions_endpoint" translatable="false">https://query2.finance.yahoo.com/v1/finance/</string>
  <string name="yahoo_endpoint" translatable="false">https://query1.finance.yahoo.com/</string>
  <string name="yahoo_initial_load_endpoint" translatable="false">https://finance.yahoo.com/</string>
  <string name="yahoo_endpoint_quote_details" translatable="false">https://query1.finance.yahoo.com/v11/finance/</string>
  <string name="historical_data_endpoint" translatable="false">https://query1.finance.yahoo.com/v8/finance/</string>
  <string name="github_endoint" translatable="false">https://api.github.com/</string>
  <string name="apewisdom_endpoint" translatable="false">https://apewisdom.io/api/v1.0/</string>
  <string name="checkout_open_source" translatable="false">https://github.com/premnirmal/StockTicker</string>
  <string name="privacy_policy_url" translatable="false">https://github.com/premnirmal/privacy/blob/master/STOCKTICKER_PRIVACY.md</string>
  <string name="github_bug_report_new_issue_url" translatable="false">https://github.com/premnirmal/StockTicker/issues/new?template=bug_report.md</string>
  <string name="github_feature_request_new_issue_url" translatable="false">https://github.com/premnirmal/StockTicker/issues/new?template=feature_request.md</string>
  <string name="dotdotdot" translatable="false">…</string>
  <string name="portfolio">Portfolio</string>
  <string name="add_to_portfolio">Add or remove from Portfolio</string>
  <string name="report_bug">Report a bug</string>
  <string name="report_bug_desc">File a bug report</string>
  <string name="feature_request">Request a feature</string>
  <string name="feature_request_desc">File a new feature request</string>
  <string name="action_add">Add</string>
  <string name="action_export">Export quotes</string>
  <string name="action_share">Share Portfolio</string>
  <string name="privacy_policy">Privacy policy</string>
  <string name="export_desc">Export your portfolio to a .json file</string>
  <string name="action_import">Import quotes</string>
  <string name="import_desc">Import quotes from a comma separated .txt file, or a .json file</string>
  <string name="action_portfolio">Watchlist</string>
  <string name="action_widgets">Widgets</string>
  <string name="action_search">Search</string>
  <string name="action_feed">Trending</string>
  <string name="action_settings">Settings</string>
  <string name="app_settings">Settings</string>
  <string name="news_feed">News</string>
  <string name="trending_stocks">Trending stocks</string>
  <string name="action_Settings">Widget Settings</string>
  <string name="action_rearrage">Rearrange stocks</string>
  <string name="action_update">Refresh Now</string>
  <string name="are_you_sure">Are you sure?</string>
  <string name="add_ticker">Add ticker</string>
  <string name="bg">Widget background</string>
  <string name="layout_type">Widget type</string>
  <string name="widget_width">Number of columns</string>
  <string name="text_color">Text color</string>
  <string name="start_time">Start time</string>
  <string name="end_time">End time</string>
  <string name="update_interval">Update interval</string>
  <string name="update_days">Update days</string>
  <string name="update_days_desc">Updates will occur on these days</string>
  <string name="round_two_dp">Round to 2 dp</string>
  <string name="round_two_dp_desc">Round the change and value to 2 decimal places</string>
  <string name="notification_alerts">Notification alerts</string>
  <string name="notification_alerts_desc">Receive notification alerts</string>
  <string name="notification_alerts_required_message">The app requires the notifications permission to receive notification alerts.</string>
  <string name="show_refresh">Show refresh icon</string>
  <string name="show_refresh_desc">Show a refresh icon in the widget (unreliable due to Android OS battery saving updates)</string>
  <string name="auto_sort">Autosort</string>
  <string name="auto_sort_desc">Stocks will be sorted by percent change.</string>
  <string name="hide_header">Hide widget header</string>
  <string name="hide_header_desc">Fetch time and refresh button.</string>
  <string name="refresh_on_screen_unlock">Refresh on unlock</string>
  <string name="refresh_on_screen_unlock_desc">Refresh when the screen unlocks (only during set hours).</string>
  <string name="bold_change">Bold text</string>
  <string name="bold_change_desc">Show changes and market value in bold</string>
  <string name="setting_currency">Show currency</string>
  <string name="setting_currency_desc">Show currency in the widget</string>
  <string name="choose_text_size">Widget text size (will be removed)</string>
  <string name="app_theme">App and widget theme</string>
  <string name="text_size_updated_message">Text size updated</string>
  <string name="bg_updated_message">Background updated</string>
  <string name="layout_updated_message">Layout type updated</string>
  <string name="widget_width_updated_message">Widget size updated</string>
  <string name="text_color_updated_message">Text color updated</string>
  <string name="refresh_updated_message">Refresh interval updated</string>
  <string name="theme_updated_message">App theme updated</string>
  <string name="days_updated_message">Update days updated</string>
  <string name="days_updated_error_message">Error - you must select days</string>
  <string name="error_exporting">Error exporting file</string>
  <string name="error_symbol">Invalid symbol</string>
  <string name="error_sharing">Error sharing quotes</string>
  <string name="error_fetching_stock">Error fetching stock</string>
  <string name="ticker_import_success">Quotes imported successfully</string>
  <string name="ticker_import_fail">Error importing quotes</string>
  <string name="no_network_message">No network connection</string>
  <string name="refresh_failed">Refresh failed</string>
  <string name="news_fetch_failed">Failed to fetch news</string>
  <string name="graph_fetch_failed">Failed to fetch data</string>
  <string name="error_fetching_suggestions">Error fetching suggestions</string>
  <string name="adblock">Error getting suggestions. Are you sure you\'re not using an adblocker? If you are using an Adblocker, please add d.yimg.com to your whitelist.</string>
  <string name="package_replaced_string" translatable="false">com.github.premnirmal.tickerwidget</string>
  <string name="only_updates_on_weekdays">Only updates on weekdays</string>
  <string name="end_time_updated">End time updated</string>
  <string name="start_time_updated">Start time updated</string>
  <string name="incorrect_time_update_error">Start time must not equal end time</string>
  <string name="share_email_subject">Here are my tickers I created using StocksWidget - https://play.google.com/store/apps/details?id=com.github.premnirmal.tickerwidget \n\nYou can import these tickers using the app by going into settings and choosing \"Import\"</string>
  <string name="my_stock_portfolio">My Stock Portfolio</string>
  <string name="number_of_shares">No. of Shares</string>
  <string name="shares">Shares</string>
  <string name="equity_value">Equity Value</string>
  <string name="value">Value</string>
  <string name="price">Price</string>
  <string name="add_position">Positions</string>
  <string name="add">Add</string>
  <string name="buy">Buy</string>
  <string name="sell">Sell</string>
  <string name="sell_price">Sell price</string>
  <string name="your_position">Your position</string>
  <string name="movements">Movements</string>
  <string name="realized_total">Realized total</string>
  <string name="realized_gain">Realized gain</string>
  <string name="not_enough_shares">You only own %1$s shares</string>
  <string name="remove_movement">Remove movement</string>
  <string name="done">Done</string>
  <string name="skip">Skip</string>
  <string name="edit_position">Positions</string>
  <string name="no_such_stock_in_portfolio">No such stock in your portfolio.</string>
  <string name="remove">Remove</string>
  <string name="move_to_different_widget">Move to different widget</string>
  <string name="select_widget">Select Widget</string>
  <string name="change_instructions">On your widget, click on the change to switch between change percent and change value</string>
  <string name="no_symbols_in_portfolio">No symbols in portfolio.</string>
  <string name="like_our_app">Like our app?</string>
  <string name="please_rate">Please rate us on the PlayStore, we would love to hear what you have to say!</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="later">Later</string>
  <string name="enable_google_finance">Enable alternate finance API?</string>
  <string name="enable_google_finance_desc">In beta. Please disable if it doesn\'t give accurate quotes.</string>
  <string name="edit_positions">Edit Positions</string>
  <string name="add_stock">Add Stocks</string>
  <string name="holdings">Holdings</string>
  <string name="average_price">Average Price</string>
  <string name="gain">Gain</string>
  <string name="loss">Loss</string>
  <string name="gain_loss">Gain/Loss</string>
  <string name="change_percent">% Change</string>
  <string name="change_amount">Change</string>
  <string name="day_change_percent">% Day Change</string>
  <string name="day_change_amount">Day Change</string>
  <string name="autosort_disabled">Auto-sort has been disabled. You can now drag and drop to sort.</string>
  <string name="remove_prompt">Are you sure you want to remove %1$s from your portfolio?</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="invalid_number">Invalid number</string>
  <string name="cannot_remove_buy">Can\'t remove this buy — later sells depend on it</string>
  <string name="invalid_time">Invalid time</string>
  <string name="add_positions_prompt">Do you want to add positions for %1$s?</string>
  <string name="already_in_portfolio">%1$s is already in your portfolio</string>
  <string name="added_to_list">%1$s added to your portfolio</string>
  <string name="next_fetch">Next fetch: %1$s</string>
  <string name="last_fetch">Last fetch: %1$s</string>
  <string name="last_and_next_fetch">Last fetch: %1$s\nNext fetch: %2$s</string>
  <string name="total_holdings">Total Holdings: %1$s</string>
  <string name="cannot_export_msg">Cannot export quotes without permission to write to external storage</string>
  <string name="cannot_import_msg">Cannot import quotes without permission to read external storage</string>
  <string name="cannot_share_msg">Cannot share quotes without permission to write to external storage</string>
  <string name="exported_to">Exported successfully</string>
  <string name="whats_new">What\'s new</string>
  <string name="whats_new_in">What\'s new in v%1$s</string>
  <string name="enter_a_symbol">Enter a symbol</string>
  <string name="no_symbols">¯\\_(ツ)_/¯\nNo symbols</string>
  <string name="error_fetching_news">¯\\_(ツ)_/¯\nError fetching news</string>
  <string name="widget_name">Widget name</string>
  <string name="widget_name_updated">Widget name updated</string>
  <string name="set">Set</string>
  <string name="total">Total</string>
  <string name="positions">Positions</string>
  <string name="recent_news">Recent News</string>
  <string name="no_data">¯\\_(ツ)_/¯\nNo data</string>
  <string name="expand">Expand</string>
  <string name="one_day">1 Day</string>
  <string name="two_weeks">14 Days</string>
</resources>