<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <CheckBoxPreference
      android:key="SETTING_AUTOSORT"
      android:title="@string/auto_sort"
      android:summary="@string/auto_sort_desc"
      android:defaultValue="true"/>

  <ListPreference
      android:key="UPDATE_INTERVAL"
      android:title="@string/update_interval"
      android:defaultValue="1"
      android:entries="@array/sync_periods"
      android:entryValues="@array/sync_periods_values"
      android:negativeButtonText="@null"
      android:positiveButtonText="@null"/>

  <com.github.premnirmal.ticker.settings.TimePreference
      android:key="START_TIME"
      android:title="@string/start_time"
      android:defaultValue="09:30"/>

  <com.github.premnirmal.ticker.settings.TimePreference
      android:key="END_TIME"
      android:title="@string/end_time"
      android:defaultValue="16:00"/>

  <Preference
      android:key="SETTING_SHARE"
      android:title="@string/action_share"
      android:selectable="true"/>

  <Preference
      android:key="SETTING_IMPORT"
      android:title="@string/action_import"
      android:selectable="true"
      android:summary="@string/import_desc"/>

  <Preference
      android:key="SETTING_EXPORT"
      android:title="@string/action_export"
      android:selectable="true"
      android:summary="@string/export_desc"/>

  <Preference
      android:key="SETTING_NUKE"
      android:title="@string/action_nuke"
      android:selectable="true"/>
</PreferenceScreen>
