<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ParanormalActivity">

    <item
        android:id="@+id/action_add_ticker"
        android:title="@string/action_add"
        android:icon="@drawable/ic_action_content_new"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_update"
        android:title="@string/action_update"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_rearrange"
        android:title="@string/action_rearrage"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_Settings"
        app:showAsAction="never" />
</menu>
