<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/text_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_export"
        android:id="@+id/action_export" />

    <include layout="@layout/divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_import"
        android:id="@+id/action_import" />

    <include layout="@layout/divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_size"
        android:id="@+id/change_text_size" />

    <include layout="@layout/divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/auto_sort" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/abc_btn_check_material"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/autosort_checkbox"
            />
    </RelativeLayout>

    <include layout="@layout/divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="8dp"
        android:text="@string/checkout_open_source"
        android:id="@+id/github_link"
        android:linksClickable="true"
        android:autoLink="all" />

    <include layout="@layout/divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="8dp"
        android:id="@+id/version"
        android:linksClickable="true"
        android:autoLink="all" />

    <include layout="@layout/divider" />

</LinearLayout>