<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sfw="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stockContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_bg"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="5dp"
    android:paddingTop="7dp"
    tools:layout_height="150dp"
    tools:layout_marginTop="100dp"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="5dp"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      >

    <TextView
        android:id="@+id/ticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textSize="@dimen/large_text"
        tools:text="GOOG"
        style="@style/BoldTextView"
        />

    <TextView
        android:id="@+id/totalValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|right"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textSize="@dimen/large_text"
        tools:text="555.02"
        style="@style/BoldTextView"
        />

    <ImageView
        android:id="@+id/more_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|right"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_more"
        />

  </LinearLayout>

  <TextView
      android:id="@+id/name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="5dp"
      android:layout_marginRight="5dp"
      android:ellipsize="end"
      android:lines="2"
      android:maxLines="2"
      android:textColor="@android:color/white"
      android:textSize="@dimen/portfolio_position_vh_text_size"
      tools:text="Google Inc"
      />


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="bottom"
      android:orientation="horizontal"
      android:paddingRight="5dp"
      android:paddingEnd="5dp"
      >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="0.33"
        android:gravity="bottom"
        android:orientation="vertical"
        >

      <com.github.premnirmal.ticker.ui.StockFieldView
          android:id="@+id/holdings"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="5dp"
          sfw:name="@string/holdings"
          sfw:or="vertical"
          sfw:text_gravity="left"
          sfw:size="@dimen/portfolio_position_vh_value_text_size"
          />

      <com.github.premnirmal.ticker.ui.StockFieldView
          android:id="@+id/gain_loss"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          sfw:name="@string/gain_loss"
          sfw:or="vertical"
          sfw:text_gravity="left"
          sfw:size="@dimen/portfolio_position_vh_value_text_size"
          />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="0.33"
        android:gravity="bottom"
        android:orientation="vertical"
        >

      <com.github.premnirmal.ticker.ui.StockFieldView
          android:id="@+id/dayChange"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          sfw:name="@string/day_change_amount"
          sfw:or="vertical"
          sfw:text_gravity="center"
          sfw:size="@dimen/portfolio_position_vh_value_text_size"
          />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.33"
        android:gravity="bottom"
        android:orientation="vertical"
        >

      <com.github.premnirmal.ticker.ui.StockFieldView
          android:id="@+id/changePercent"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="5dp"
          sfw:name="@string/change_percent"
          sfw:or="vertical"
          sfw:text_gravity="right"
          sfw:size="@dimen/portfolio_position_vh_value_text_size"
          />

      <com.github.premnirmal.ticker.ui.StockFieldView
          android:id="@+id/changeValue"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          sfw:name="@string/change_amount"
          sfw:or="vertical"
          sfw:text_gravity="right"
          sfw:size="@dimen/portfolio_position_vh_value_text_size"
          />

    </LinearLayout>
  </LinearLayout>

</LinearLayout>
