<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:elevation="0dp"
      app:elevation="0dp"
      >

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/fake_status_bar"

        />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:elevation="0dp"
        app:elevation="0dp"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:title="@string/news_feed"
                />
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/swipe_container"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_flipper"
        android:background="?attr/colorSurface"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

      <ProgressBar
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/error_fetching_news"
          style="@style/Widget.StocksWidget.TextView.FetchError"
	        android:textAppearance="@style/TextAppearance.StocksWidget.FetchError"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/no_data"
          style="@style/Widget.StocksWidget.TextView.FetchError"
	        android:textAppearance="@style/TextAppearance.StocksWidget.FetchError"
          />

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recycler_view"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:clipToPadding="false"
          android:scrollbars="none"
          />
    </ViewFlipper>

  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>