<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    >

  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:elevation="0dp"
      app:elevation="0dp"
      >

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/fake_status_bar"

        />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:elevation="0dp"
        app:elevation="0dp"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:title="@string/action_search"
                />

    <EditText
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:elevation="0dp"
        android:hint="@string/enter_a_symbol"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions|textCapCharacters"
        android:lines="1"
        android:maxLines="1"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:textAllCaps="true"
        android:textSize="@dimen/large_text"
        app:elevation="0dp"
        app:layout_scrollFlags="enterAlways|snap"
        />
  </com.google.android.material.appbar.AppBarLayout>

  <LinearLayout
      android:id="@+id/trending_holder"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/trending_stocks"
        android:textAppearance="@style/TextAppearance.StocksWidget.TitleSmall"
        style="@style/Widget.StocksWidget.TextView.TitleSmall"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trending_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />
  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/search_results_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:scrollbars="none"
      android:visibility="gone"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      />

</androidx.coordinatorlayout.widget.CoordinatorLayout>